manifests/media-apps/plex/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
  namespace: media-apps
spec:
  endpointSelector:
    matchLabels:
      app: plex
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "32400"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "32400"
    - fromCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - port: "32400"
        - ports:
            - port: "32410"
        - ports:
            - port: "32412"
        - ports:
            - port: "32413"
        - ports:
            - port: "32414"
    - fromEndpoints:
        - matchLabels:
            app: tautulli
      toPorts:
        - ports:
            - port: "32400"
    - fromEndpoints:
        - matchLabels:
            app: radarr
      toPorts:
        - ports:
            - port: "32400"
    - fromEndpoints:
        - matchLabels:
            app: sonarr
      toPorts:
        - ports:
            - port: "32400"
    - fromEndpoints:
        - matchLabels:
            app: overseerr
      toPorts:
        - ports:
            - port: "32400"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
